fix: Header not sticky on mobile, 404 fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,9 +99,6 @@ a:hover {
 .header {
   border-bottom: 1px solid transparent;
   padding: 16px;
-  position: sticky;
-  top: 0;
-  z-index: 6;
 }
 
 .header.open {
@@ -184,6 +181,9 @@ a:hover {
 @media screen and (min-width: 900px) {
   .header {
     padding: 0 16px;
+    position: sticky;
+    top: 0;
+    z-index: 6;
   }
 
   .header.open {
@@ -516,6 +516,10 @@ a:hover {
   margin: 16px 0;
 }
 
+.content .line-expanded {
+  line-height: 1.6;
+}
+
 .content ul {
   list-style: disc;
   margin-left: 16px;
@@ -629,7 +633,9 @@ a:hover {
   flex-direction: column;
   justify-content: center;
   min-height: calc(100vh - var(--navigation-height) - var(--footer-height));
-  min-height: calc(var(--vh, 1vh) * 100 - var(--navigation-height) - var(--footer-height));
+  min-height: calc(
+    var(--vh, 1vh) * 100 - var(--navigation-height) - var(--footer-height)
+  );
   padding: 16px;
 }
 
